--- a/package.json
+++ b/package.json
@@ -10,19 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.8.4",
+    "face-api.js": "^0.22.2",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.544.0",
     "moment": "^2.30.1",
+    "postprocessing": "^6.38.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.1",
     "react-to-print": "^3.0.6",
-    "tailwindcss": "^4.1.4"
+    "tailwindcss": "^4.1.4",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
